# gitrea

./: .gitignore  Dockerfile  README.md  git-zlib-changed.c  git-zlib.c  gitrea.cabal  new-template.cabal  notes.md  package.yaml  stack.yaml  zlib-delta
app/: Main.hs
src/: Main.hs
src/Gitrea/: Common.hs  Repository.hs
src/Gitrea/Packfile/: Delta.hs  Packfile.hs
src/Gitrea/Remote/: Operations.hs  PackProtocol.hs  TcpClient.hs
src/Gitrea/Store/: Index.hs  Object.hs  ObjectStore.hs  Unpack.hs
