cabal-version: 2.2

name:           gitrea
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/criskell/gitrea#readme>
homepage:       https://github.com/criskell/gitrea#readme
bug-reports:    https://github.com/criskell/gitrea/issues
author:         criskell
copyright:      2025 criskell
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/criskell/gitrea

executable gitrea-exe
  main-is: Main.hs
  hs-source-dirs:
      src
  ghc-options: -Wall -rtsopts -fno-warn-unused-do-bind -fno-warn-unused-binds -O2
  build-depends:
      base >=3 && <5
    , filepath >= 1.3
    , binary-strict >= 0.4
    , zlib >= 0.5
    , directory >= 1.1
    , cryptohash >= 0.8
    , iteratee == 0.8.4.2
    , iteratee-compress >= 0.3
    , bytestring >= 0.9 && < 0.10
    , attoparsec >= 0.10
    , text >= 0.11
    , network >= 2.3
    , unix
    , binary >= 0.5 && < 0.6
    , utf8-string
    , mtl
    , text
  default-language: Haskell2010
